--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -64,10 +64,16 @@
                                 <a href="#">Links</a>
                                 <ul>
                                     <li><a href="tel:#"><i class="icon-phone"></i>Call: +0123 456 789</a></li>
-                                    <li><a href="wishlist.html"><i class="icon-heart-o"></i>My Wishlist
-                                            <span>(3)</span></a></li>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    {% if user.is_authenticated %}
+                                    <li>
+                                        <a href="wishlist.html">
+                                            <i class="icon-heart-o"></i> My Wishlist
+                                            <span>(3)</span>
+                                        </a>
+                                    </li>
+                                    {% endif %}
+                                    <li><a href="{% url 'about' %}">About Us</a></li>
+                                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
                                     {% if user.is_authenticated %}
                                     <li class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
