create a category page and model and function

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -884,6 +884,9 @@
                             <li><a href="elements-icon-boxes.html">Icon Boxes</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <li><a href="elements-product-category.html">Product Category</a></li>
+                    </li>
                 </ul>
             </nav><!-- End .mobile-nav -->
 
