add the cart, category, wishlist, contact thempalte

--- a/accounts/templates/index.html
+++ b/accounts/templates/index.html
@@ -3,8 +3,7 @@
 {% block content %}
 <style>
     .Bg {
-    background-image: url("{% static 'assets/images/backgrounds/cta/bg-6.jpg' %}")
-
+        background-image: url("{% static 'assets/images/backgrounds/cta/bg-6.jpg' %}")
     }
 </style>
 
@@ -93,7 +92,8 @@
                             <div class="col-md-6 col-lg-12">
                                 <div class="banner banner-display">
                                     <a href="#">
-                                        <img src="{% static 'assets/images/banners/home/intro/banner-1.jpg' %}" alt="Banner">
+                                        <img src="{% static 'assets/images/banners/home/intro/banner-1.jpg' %}"
+                                            alt="Banner">
                                     </a>
 
                                     <div class="banner-content">
@@ -110,7 +110,8 @@
                             <div class="col-md-6 col-lg-12">
                                 <div class="banner banner-display mb-0">
                                     <a href="#">
-                                        <img src="{% static 'assets/images/banners/home/intro/banner-2.jpg' %}" alt="Banner">
+                                        <img src="{% static 'assets/images/banners/home/intro/banner-2.jpg' %}"
+                                            alt="Banner">
                                     </a>
 
                                     <div class="banner-content">
@@ -238,10 +239,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -264,10 +265,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -297,10 +298,10 @@
                         <figure class="product-media">
                             <span class="product-label label-new">NEW</span>
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -325,10 +326,10 @@
                         <figure class="product-media">
                             <span class="product-label label-sale">30% OFF</span>
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -359,10 +360,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -392,10 +393,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -419,10 +420,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -475,10 +476,10 @@
                         <figure class="product-media">
                             <span class="product-label label-new">NEW</span>
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-3-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -503,10 +504,10 @@
                         <figure class="product-media">
                             <span class="product-label label-sale">30% OFF</span>
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-4-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -565,10 +566,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-1-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -590,10 +591,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-6-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -645,10 +646,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-2-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
@@ -676,10 +677,10 @@
                     <div class="product product-11 text-center">
                         <figure class="product-media">
                             <a href="product.html">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-1.jpg' %}" alt="Product image"
-                                    class="product-image">
-                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-2.jpg' %}" alt="Product image"
-                                    class="product-image-hover">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-1.jpg' %}"
+                                    alt="Product image" class="product-image">
+                                <img src="{% static 'assets/images/demos/demo-2/products/product-5-2.jpg' %}"
+                                    alt="Product image" class="product-image-hover">
                             </a>
 
                             <div class="product-action-vertical">
