--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -303,7 +303,7 @@
                 <li><a href="javascript:void(0);" class="menu-toggle"><i
                             class="zmdi zmdi-shopping-cart"></i><span>Category</span></a>
                     <ul class="ml-menu">
-                        <li><a href="ec-product.html">Category</a></li>
+                        <li><a href="{% url 'category' %}">Category</a></li>
                         <li><a href="ec-product-List.html">Category List</a></li>
                     </ul>
                 </li>
@@ -509,5 +509,6 @@
 <script src="{% static 'assets/js/pages/index.js' %}"></script>
 <script src="{% static 'assets/js/pages/ecommerce.js' %}"></script>
 <script src="{% static 'assets/js/pages/charts/jquery-knob.min.js' %}"></script>
+<script src="{% static 'assets/js/pages/forms/basic-form-elements.js' %}"></script>
 
 </html>
