--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -129,7 +129,7 @@
                                 </li>
 
                                 <li class="megamenu-container active">
-                                    <a href="{% url 'category_list' %}">Category</a>
+                                    <a href="#">Category</a>
                                 </li>
                                 <li class="megamenu-container active">
                                     <a href="{% url 'products' %}">products</a>
