create sub-category mode and function and html templates

--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -310,7 +310,7 @@
                 <li><a href="javascript:void(0);" class="menu-toggle"><i
                             class="zmdi zmdi-shopping-cart"></i><span>Sub-Category</span></a>
                     <ul class="ml-menu">
-                        <li><a href="ec-product.html">Sub-Category</a></li>
+                        <li><a href="{% url 'subcategory' %}">Sub-Category</a></li>
                         <li><a href="ec-product-List.html">Sub-Category List</a></li>
                     </ul>
                 </li>
